`Added CSS styles for hero, features, and call-to-action sections, updated HTML index file to include links and a button, and modified JavaScript files to load preset cars and add event listener for add car button.`

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="nav-links">
-                <span>Home</span>
+                <a href="homepage.html"><span>Home</span></a>
                 <span>Auctions</span>
                 <span>Services</span>
                 <span>About</span>
@@ -32,11 +32,11 @@
         </div>
         <div class="active-auctions-container">
             <h2>Active Auctions</h2>
+            <button id="addCarButton" onclick="addCar()">Add Car</button>
             <div class="car-list" id="car-list">
             </div>
-            <button onclick="addCar()">Add Car</button>
         </div>
         </div>
     </body>
-    <script src="..\\JS\\ActiveAuctions.js"></script>
+    <script src="../JS/ActiveAuctions.js"></script>
 </html>
