--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -15,7 +15,7 @@
 
         <div class="nav-links">
             <span>Home</span>
-            <a href="index.html"><span>Auctions</span></a>
+            <a href="auctions.html"><span>Auctions</span></a>
             <span>Services</span>
             <span>About</span>
         </div>
@@ -41,17 +41,17 @@
             <h2>Hvorfor os?</h2>
             <div class="features">
                 <div class="feature">
-                    <img src="../images/feature1.png" alt="Bredt udvalg">
+                    <img src="../images/feature1.jpg" alt="Bredt udvalg">
                     <h3>Bredt udvalg</h3>
                     <p>Vælg fra et bredt udvalg af højkvalitets biler!</p>
                 </div>
                 <div class="feature">
-                    <img src="../images/feature2.png" alt="Pålidelige sælgere">
+                    <img src="../images/feature2.jpg" alt="Pålidelige sælgere">
                     <h3>Pålidelige sælgere</h3>
                     <p>Alle sælgere verificeres for at sørge for en god brugeroplevelse!</p>
                 </div>
                 <div class="feature">
-                    <img src="../images/feature3.png" alt="Nemme bud">
+                    <img src="../images/feature3.jpg" alt="Nemme bud">
                     <h3>Nem bydefunktion</h3>
                     <p>Det er nemt at byde på biler med kun et par klik!</p>
                 </div>
