`Added active class styling to nav links and updated links in auctions and homepage HTML files`

--- a/HTML/auctions.html
+++ b/HTML/auctions.html
@@ -15,9 +15,9 @@
 
             <div class="nav-links">
                 <a href="homepage.html"><span>Home</span></a>
-                <span>Auctions</span>
-                <span>Services</span>
-                <span>About</span>
+                <span class="active">Auctions</span>
+                <!-- <span>Services</span>
+                <span>About</span> -->
 
             </div>
 
