--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -14,10 +14,10 @@
         </div>
 
         <div class="nav-links">
-            <span>Home</span>
+            <span class="active">Home</span>
             <a href="auctions.html"><span>Auctions</span></a>
-            <span>Services</span>
-            <span>About</span>
+            <!-- <span>Services</span> -->
+            <!-- <span>About</span> -->
         </div>
 
         <div class="search-bar">
@@ -34,7 +34,7 @@
         <div class="hero-section">
             <h1>Velkommen til Aksel's Auto Auktion</h1>
             <p>Pålidelig bilauktionshus siden 2025</p>
-            <button onclick="window.location.href='vehicles.html'">Se auktioner</button>
+            <button onclick="window.location.href='auctions.html'">Se auktioner</button>
         </div>
 
         <div class="features-section">
