--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,8 +26,8 @@
             </div>
     
             <div class="auth-buttons">
-                <button class="register">Register</button>
-                <button class="login">Login</button>
+                <a href="register.html" class="register">Register</a>
+                <a href="login.html" class="login">Login</a>
             </div>
         </div>
         <div class="active-auctions-container">
