--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -25,8 +25,8 @@
         </div>
 
         <div class="auth-buttons">
-            <button class="register">Register</button>
-            <button class="login">Login</button>
+            <a href="register.html" class="register">Register</a>
+            <a href="login.html" class="login">Login</a>
         </div>
     </div>
 
