--- a/HTML/login.html
+++ b/HTML/login.html
@@ -16,17 +16,16 @@
 
         <div class="nav-links">
             <a href="homepage.html"><span>Home</span></a>
-            <span>Auctions</span>
-            <span>Services</span>
-            <span>About</span>
+            <a href="auctions.html"><span>Auctions</span></a>
+
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search">
         </div>
 
         <div class="auth-buttons">
-            <button class="register">Register</button>
-            <button class="login">Login</button>
+            <a href="register.html" class="register">Register</a>
+            <a href="login.html" class="login">Login</a>
         </div>
     </div>
 
