--- a/HTML/register.html
+++ b/HTML/register.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AAA Auction</title>
-    <link rel="stylesheet" href="..\\CSS\\stylesheet.css">
-    <link rel="stylesheet" href="..\\CSS\\loginstyle.css">
+    <link rel="stylesheet" href="../CSS/stylesheet.css">
+    <link rel="stylesheet" href="../CSS/loginstyle.css">
 </head>
 <body>
     <div class="navbar">
@@ -13,35 +13,41 @@
             <div class="logo">AAA</div>
             <div class="subtitle">Aksels Auto Auktion</div>
         </div>
-
         <div class="nav-links">
-            <a href="homepage.html"><span>Home</span></a>
-            <span>Auctions</span>
-            <span>Services</span>
-            <span>About</span>
+            <a href="homepage.html">Home</a>
+            <a href="#">Auctions</a>
+            <a href="#">Services</a>
+            <a href="#">About</a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search">
         </div>
-
         <div class="auth-buttons">
-            <button class="register">Register</button>
-            <button class="login">Login</button>
+            <button class="button register">Register</button>
+            <button class="button login">Login</button>
         </div>
     </div>
-
-    <div class="logininpage">
-        <div class="welcome-message">
-            <h1>Lav din bruger</h1>
-            <p>Indskriv et eller andet blip blip</p>
+    <div class="title">
+        <h1>Opret ny konto</h1>
+    </div>
+    <div class="flex-container">
+        <div class="flex-item">
+            Køberkonto
+            <div class="description">Opret en konto for at købe biler på auktion. Blah blah blah</div>
+            <button class="action-button">Opret køber</button>
         </div>
-        <div class="rounded-box">
-            <h1>Lav din bruger her</h1>
-            
-            <input type="text" class="input-box" placeholder="Brugernavn">
-        
-            <input type="password" class="input-box" placeholder="Password">
-            <button class="login-button">Registrer</button>
+        <div class="flex-item">
+            Sælgerkonto
+            <div class="description">Opret en konto for at sælge dine biler på auktion. Blah blah blah</div>
+            <button class="action-button">Kontakt os</button>
         </div>
+    </div>
+    <hr class="divider">
+    <div class="section">
+        <h2 class="section-title">Spørgsmål?</h2>
+        <p class="section-text">Så ring til xx xx xx xx</p>
+        <p class="section-text">Eller skriv til AkselErGigalækker@micas.dk</p>
+        <p class="section-text">Så skal vi nok hjælpe :)!</p>
+    </div>
 </body>
 </html>
